Adding subtask from story type issues.

--- a/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
@@ -28,6 +28,8 @@ oro:
             description.label: Description
             resolution.label: Resolution
 
+            subtask: Subtask
+
         issuetype.name.label: Name
         issuestatus.name.label: Name
         issuepriority.name.label: Name
