--- a/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
@@ -4,8 +4,8 @@ oro:
     issues:
         issue:
             entity_label: Issue
-            summary:  Summary2
-            code: Code2
+            summary:  Summary
+            code: Code
             description: Description
             type: Type
             status: Status
@@ -22,8 +22,8 @@ oro:
             list: Issues List
             entity_plural_label: Issues
 
-            id.label: Id1
-            summary.label: Summary1
+            id.label: Id
+            summary.label: Summary
             code.label: Code
             description.label: Description
             resolution.label: Resolution
@@ -58,3 +58,7 @@ oro:
                 resolve: Resolve
                 close: Close
                 reopen: Reopen
+
+        latest_issues:
+            view_all: See all issues
+            label: Latest issues
