Added create issue button on user page using placeholders.

--- a/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
@@ -68,3 +68,5 @@ oro:
             description: Some description
             status: Status
             total: Total
+
+        assign_ticket: Ticket
