Fixes and additions on search, view page, grid.

--- a/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/translations/messages.en.yml
@@ -30,6 +30,7 @@ oro:
             resolution.label: Resolution
 
             subtask: Subtask
+            parent_story: Parent story
 
         issuetype.name.label: Name
         issuestatus.name.label: Name
